# Desert-Explorer-Game

./: CHANGELOG.md  LICENSE  Project2.cabal  README.md  saved_game.txt
app/: BFS.hs  GameClass.hs  GameLoader.hs  GameLogic.hs  GameSaver.hs  Gui.hs  Main.hs  MapGen.hs  Types.hs  Utils.hs  WormLogic.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
