cabal-version:      3.0
name:               desert-game-v2
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Hatim Draoui
maintainer:         hatimdraoui@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Project2
    import:           warnings
    main-is:          Main.hs
    other-modules: 
        Gui, GameClass, Types, 
        BFS, MapGen, Utils, GameLogic, WormLogic, 
        GameSaver, GameLoader
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0, random, gloss ==1.13.*, stm, parsec
    hs-source-dirs:   app
    default-language: Haskell2010
